1. Collection API Улучшения[#89279]