@@ -19,11 +19,8 @@ public class BankTransfersTest {
         BankTransfers transfers = new BankTransfers();
         transfers.addUser(new User("Filipp", "123"));
         transfers.addUser(new User("Foma", "456"));
-        Set<User> result = new HashSet<>();
-        result.add(transfers.getUserByPassport("123"));
-        result.add(transfers.getUserByPassport("456"));
-        assertThat(result,
-                is(new HashSet<>(Arrays.asList(new User("Filipp", "123"), new User("Foma", "456")))));
+        assertThat(Set.of(transfers.getUserByPassport("123"), transfers.getUserByPassport("456")),
+                is(Set.of(new User("Filipp", "123"), new User("Foma", "456"))));
     }
 
     @Test
@@ -37,7 +34,7 @@ public class BankTransfersTest {
             result.add(transfers.getUserByPassport("123"));
         }
         result.add(transfers.getUserByPassport("456"));
-        assertThat(result, is(new HashSet<>(Arrays.asList(new User("Foma", "456")))));
+        assertThat(result, is(Set.of(new User("Foma", "456"))));
     }
 
     @Test
@@ -47,9 +44,8 @@ public class BankTransfersTest {
         transfers.addUser(new User("Foma", "456"));
         transfers.addAccountToUser("123", new Account(777, "account1"));
         transfers.addAccountToUser("123", new Account(111, "account2"));
-        transfers.getUserAccounts("123");
         assertThat(transfers.getUserAccounts("123"),
-                is(Arrays.asList(new Account(777, "account1"), new Account(111, "account2"))));
+                is(List.of(new Account(777, "account1"), new Account(111, "account2"))));
     }
 
     @Test
@@ -59,9 +55,8 @@ public class BankTransfersTest {
         transfers.addUser(new User("Foma", "456"));
         transfers.addAccountToUser("456", new Account(777, "account1"));
         transfers.addAccountToUser("456", new Account(111, "account2"));
-        transfers.getUserAccounts("456");
         assertThat(transfers.getUserAccounts("456"),
-                is(Arrays.asList(new Account(777, "account1"), new Account(111, "account2"))));
+                is(List.of(new Account(777, "account1"), new Account(111, "account2"))));
     }
 
     @Test
@@ -72,7 +67,7 @@ public class BankTransfersTest {
         transfers.addAccountToUser("456", new Account(777, "account1"));
         transfers.addAccountToUser("456", new Account(111, "account2"));
         transfers.deleteAccountFromUser("456", new Account(111, "account2"));
-        assertThat(transfers.getUserAccounts("456"), is(Arrays.asList(new Account(777, "account1"))));
+        assertThat(transfers.getUserAccounts("456"), is(List.of(new Account(777, "account1"))));
     }
 
     @Test
@@ -83,9 +78,9 @@ public class BankTransfersTest {
         transfers.addAccountToUser("456", new Account(777, "account1"));
         transfers.addAccountToUser("123", new Account(888, "account2"));
         transfers.transferMoney("456", "account1", "123", "account2", 222);
-        assertThat(Arrays.asList(transfers.getAccountByPassportAndRequisite("123",
+        assertThat(List.of(transfers.getAccountByPassportAndRequisite("123",
                 "account2"), transfers.getAccountByPassportAndRequisite("456", "account1")),
-                is(Arrays.asList(new Account(1110, "account2"), new Account(555, "account1"))));
+                is(List.of(new Account(1110, "account2"), new Account(555, "account1"))));
     }
 
     @Test
@@ -96,8 +91,8 @@ public class BankTransfersTest {
         transfers.addAccountToUser("456", new Account(777, "account1"));
         transfers.addAccountToUser("123", new Account(111, "account2"));
         transfers.transferMoney("123", "account2", "456", "account1", 1000);
-        assertThat(Arrays.asList(transfers.getAccountByPassportAndRequisite("123",
+        assertThat(List.of(transfers.getAccountByPassportAndRequisite("123",
                 "account2"), transfers.getAccountByPassportAndRequisite("456", "account1")),
-                is(Arrays.asList(new Account(111, "account2"), new Account(777, "account1"))));
+                is(List.of(new Account(111, "account2"), new Account(777, "account1"))));
     }
 }
