@@ -2,8 +2,6 @@ package ru.job4j.list;
 
 import org.junit.Test;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.core.Is.is;
@@ -16,27 +14,9 @@ import static org.junit.Assert.assertThat;
 public class ConvertList2ArrayTest {
 
     @Test
-    public void when7ElementsThen9() {
-        ConvertList2Array list = new ConvertList2Array();
-        int[][] result = list.toArray(
-                Arrays.asList(1, 2, 3, 4, 5, 6, 7),
-                3
-        );
-        int[][] expect = {
-                {1, 2, 3},
-                {4, 5, 6},
-                {7, 0, 0}
-        };
-        assertThat(result, is(expect));
-    }
-
-    @Test
     public void when6ElementsThen6() {
         ConvertList2Array list = new ConvertList2Array();
-        int[][] result = list.toArray(
-                Arrays.asList(1, 2, 3, 4, 5, 6),
-                3
-        );
+        int[][] result = list.toArray(List.of(1, 2, 3, 4, 5, 6), 3);
         int[][] expect = {
                 {1, 2},
                 {3, 4},
@@ -46,29 +26,35 @@ public class ConvertList2ArrayTest {
     }
 
     @Test
-    public void when1On3And1On2And1On4ArrayThenList9() {
+    public void when7ElementsThen9() {
         ConvertList2Array list = new ConvertList2Array();
-        List<int[]> listArr = new ArrayList<>();
-        listArr.add(new int[]{1, 2, 3});
-        listArr.add(new int[]{4, 5});
-        listArr.add(new int[]{6, 7, 8, 9});
-        List<Integer> result = list.convert(listArr);
-        List<Integer> expect = Arrays.asList(
-                1, 2, 3, 4, 5, 6, 7, 8, 9
-        );
+        int[][] result = list.toArray(List.of(1, 2, 3, 4, 5, 6, 7), 3);
+        int[][] expect = {
+                {1, 2, 3},
+                {4, 5, 6},
+                {7, 0, 0}
+        };
         assertThat(result, is(expect));
     }
 
     @Test
     public void when1On4And1On1ArrayThenList5() {
         ConvertList2Array list = new ConvertList2Array();
-        List<int[]> listArr = new ArrayList<>();
-        listArr.add(new int[]{1, 2, 3, 4});
-        listArr.add(new int[]{5});
-        List<Integer> result = list.convert(listArr);
-        List<Integer> expect = Arrays.asList(
-                1, 2, 3, 4, 5
+        List<Integer> result = list.convert(List.of(
+                new int[]{1, 2, 3, 4},
+                new int[]{5})
         );
-        assertThat(result, is(expect));
+        assertThat(result, is(List.of(1, 2, 3, 4, 5)));
+    }
+
+    @Test
+    public void when1On3And1On2And1On4ArrayThenList9() {
+        ConvertList2Array list = new ConvertList2Array();
+        List<Integer> result = list.convert(List.of(
+                new int[]{1, 2, 3},
+                new int[]{4, 5},
+                new int[]{6, 7, 8, 9})
+        );
+        assertThat(result, is(List.of(1, 2, 3, 4, 5, 6, 7, 8, 9)));
     }
 }
