@@ -2,8 +2,6 @@ package ru.job4j.user;
 
 import org.junit.Test;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
 
@@ -22,7 +20,7 @@ public class SortUserTest {
         User user3 = new User("Ivan", 25);
         User user4 = new User("Inna", 15);
         User user5 = new User("Alena", 27);
-        Set<User> users = new SortUser().sort(new ArrayList<>(Arrays.asList(user1, user2, user3, user4, user5)));
+        Set<User> users = new SortUser().sort(List.of(user1, user2, user3, user4, user5));
         assertThat(users.toArray(new User[0]), is(new User[]{user4, user3, user5, user1, user2}));
     }
 
@@ -32,7 +30,7 @@ public class SortUserTest {
         User user2 = new User("Anton", 28);
         User user3 = new User("Ivan", 21);
         User user4 = new User("Alena", 39);
-        Set<User> users = new SortUser().sort(new ArrayList<>(Arrays.asList(user1, user2, user3, user4)));
+        Set<User> users = new SortUser().sort(List.of(user1, user2, user3, user4));
         assertThat(users.toArray(new User[0]), is(new User[]{user3, user2, user4, user1}));
     }
 
@@ -43,7 +41,7 @@ public class SortUserTest {
         User user3 = new User("Ivan", 25);
         User user4 = new User("Inna", 15);
         User user5 = new User("Alena", 27);
-        List<User> users = new SortUser().sortNameLength(new ArrayList<>(Arrays.asList(user1, user2, user3, user4, user5)));
+        List<User> users = new SortUser().sortNameLength(List.of(user1, user2, user3, user4, user5));
         assertThat(users.toArray(new User[0]), is(new User[]{user4, user3, user5, user2, user1}));
     }
 
@@ -53,7 +51,7 @@ public class SortUserTest {
         User user2 = new User("Иван", 30);
         User user3 = new User("Сергей", 20);
         User user4 = new User("Иван", 25);
-        List<User> users = new SortUser().sortNameLength(new ArrayList<>(Arrays.asList(user1, user2, user3, user4)));
+        List<User> users = new SortUser().sortNameLength(List.of(user1, user2, user3, user4));
         assertThat(users.toArray(new User[0]), is(new User[]{user4, user2, user3, user1}));
     }
 
@@ -64,7 +62,7 @@ public class SortUserTest {
         User user3 = new User("Ivan", 25);
         User user4 = new User("Inna", 15);
         User user5 = new User("Alena", 27);
-        List<User> users = new SortUser().sortByAllFields(new ArrayList<>(Arrays.asList(user1, user2, user3, user4, user5)));
+        List<User> users = new SortUser().sortByAllFields(List.of(user1, user2, user3, user4, user5));
         assertThat(users.toArray(new User[0]), is(new User[]{user5, user2, user4, user3, user1}));
     }
 
@@ -74,7 +72,7 @@ public class SortUserTest {
         User user2 = new User("Иван", 30);
         User user3 = new User("Сергей", 20);
         User user4 = new User("Иван", 25);
-        List<User> users = new SortUser().sortByAllFields(new ArrayList<>(Arrays.asList(user1, user2, user3, user4)));
+        List<User> users = new SortUser().sortByAllFields(List.of(user1, user2, user3, user4));
         assertThat(users.toArray(new User[0]), is(new User[]{user4, user2, user3, user1}));
     }
 
